040327 release
--------------

added a configurable spam button.

added a button for using custom headers on an outgoing mail message.

updated printing to use the new jdk 1.4 printing system.  also made 
printing, err, work correctly now.

fixed notifyNewMessagesMain and Node so that they actually work.

running with maildir support (including POP3 with a maildir backend), you
no longer get excess ...subFolder directories on WinXP.

made a way to reconnect to a folder after it's been disconnected, other than
closing and reopening the entire store.

fixed a bug where deleted messages weren't being removed from the folder table
after reconnecting under disconnected imap.

fixed a bug in which, when switching from desktop mode to preview mode
with autopreview off, you could end up opening a new window with the enter 
key instead of just showing the message in the preview pane.

fixed a minor bug in which clearing a preview-pane mode message with a 
custom theme would result in the message flashing for a moment with a 
default font.

fixed a bug where, in preview pane mode, messages with attachments wouldn't
get their themes set correctly.

made it so selecting or scrolling in a messagepanel will remove the
new message icon.

fixed a bug in configuration where a new user without an explicit SMTP
server set would end up causing NPE's when it tried to send a message.

optimized IMAP folder loading so that we initially fetch the SEEN flag,
and then pre-fetch the messages we'll actually display (by loading around
the getFirstUnreadMessage() value)

fixed editor display of boolean properties in Folder editor.

worked around a sun bug in jdk1.4 which would result in the 
FolderSelectorPane being empty the first time it was brought up.

added Bounce Message command, plus a BounceMessage filter.

modified the sendMessageList of the NewMessageInfo to use a sendMessageMap
instead.

changed the default action of the FolderSelectorPane to be only subscribed