@@ -533,6 +533,7 @@ Pooka.saveFolderWindowLocationsOnExit.label=Save Window Locations
 Pooka.newMessage.autoAddSignature.label=Automatically Add Signature
 Pooka.newMessage.signatureBeforeCopiedMessage.label=Add Signature Before Message
 Pooka.autoExpunge.label=Automatically Expunge Deleted Messages
+Pooka.fastDelete.label=Fast Delete enabled
 Pooka.autoPreview.label=Automatically Preview Selected Message
 Pooka.autoSelectFirstUnread.label=Automatically Select First Unread Message
 Pooka.checkUnsentMessages.label=Ask Before Closing Unsent Messages
