@@ -82,6 +82,9 @@ Pooka.defaultSigGenerator=net.suberic.pooka.FileSignatureGenerator
 Pooka.autoExpunge=true
 Pooka.autoExpunge.propertyType=Boolean
 
+Pooka.fastDelete=true
+Pooka.fastDelete.propertyType=Boolean
+
 Pooka.checkUnsentMessages=true
 Pooka.checkUnsentMessages.propertyType=Boolean
 
@@ -897,7 +900,7 @@ Preferences.propertyScoped=false
 Preferences.templateScoped=true
 Preferences.propertyType=Tabbed
 
-Preferences.UI=Pooka.guiType:Pooka.autoPreview:Pooka.autoSelectFirstUnread:Pooka.lineWrap:Pooka.lineLength:Pooka.displayTextAttachments:Pooka.attachmentDisplayMaxLength:Pooka.autoExpunge:Pooka.checkUnsentMessages:Pooka.folderPanel.theme:Pooka.messagePanel.theme
+Preferences.UI=Pooka.guiType:Pooka.autoPreview:Pooka.autoSelectFirstUnread:Pooka.lineWrap:Pooka.lineLength:Pooka.displayTextAttachments:Pooka.attachmentDisplayMaxLength:Pooka.autoExpunge:Pooka.fastDelete:Pooka.checkUnsentMessages:Pooka.folderPanel.theme:Pooka.messagePanel.theme
 Preferences.Reply=Pooka.replyPrefix:Pooka.forwardPrefix:Pooka.forwardStyle
 Preferences.Startup=Pooka.openFoldersOnConnect:Pooka.openSavedFoldersOnStartup:Pooka.saveOpenFoldersOnExit:Pooka.saveFolderWindowLocationsOnExit
 Preferences.Signature=Pooka.newMessage.autoAddSignature:Pooka.newMessage.signatureBeforeCopiedMessage
