@@ -7,19 +7,24 @@
 
 -----
 
+*) queuing of outgoing mails
+	todo on this:
+	*)  add some sort of an administrative api to the NetworkConnection
+		so that the application and the admin tools (the bottom right
+		config) don't have the same restrictions (or lack thereof).
+		 -- somewhat started with the new test address api.
+	*) make it so there is some way for the NetworkConnection to detect
+		whether or not it's up.
+			-- started.  make sure it's enough.
+*) add support for jdk1.4
+	-- NetworkInterface classes
+
 *) add support for running without any local files.
 	-- support for http: access?
 	    -- fix variable bundle to make sure that we close the stream
 	    -- better error messages
 	    -- come up with configuration/usage plan.
 	  
-*) ?? ^D message, hit return for next message, get an error?
-	tough.  could fix by having a temporary 'deleted' flag on the message
-	itself, maybe?
-	- thought was to make stuff happen almost immediately on the awt
-	event thread, then switch over to the folder thread for the real
-	work.
-
 *) fix error display with exception so that you can see the stack trace.
 
 *) disconneted:  use downloaded headers when available?
@@ -37,18 +42,6 @@
 	*) attach file
 	*) save attachment?
 
-*) queuing of outgoing mails
-	todo on this:
-	*)  add some sort of an administrative api to the NetworkConnection
-		so that the application and the admin tools (the bottom right
-		config) don't have the same restrictions (or lack thereof).
-		 -- somewhat started with the new test address api.
-	*) make it so there is some way for the NetworkConnection to detect
-		whether or not it's up.
-			-- started.  make sure it's enough.
-*) add support for jdk1.4
-	-- NetworkInterface classes
-
 *) add support for saved searches.
 
 *) -- windows --
@@ -63,6 +56,8 @@
 *) add a dependent button/menu item.  so that that way instead of having
 	a separate Caching popup menu, you can just say "if caching,
 	add this menu item; if not, don't."
+
+*) filtering multiple message should show a status.
 
 -----------
 
@@ -127,8 +122,6 @@ javax.mail.MessagingException: Error:  could not copy messages to folder:  net.s
    *) fix threading on encryption actions.
      *) !!! we're parsing each message on load now. !!!
 
-
-*) filtering multiple message should show a status.
 
 *) fix error in encoded stream problem.
 	-- just better error (?)  or maybe print out as far as it goes.
@@ -313,6 +306,9 @@ icons changing?  test.
 
 *) make sure that if you close a store, it doesn't reopen it.
 	-- ?? should work.  look for testcase.
+
+*) ?? add a notification to a message which has been deleted while fastDelete
+	is enabled, but hasn't yet actually been removed.
 
 *) come up with a wrapper for spawning external editors on windows.
 
