@@ -1,3 +1,7 @@
+added a fastDelete option (enabled by default) which auto-selects the next
+message when a delete is requested, instead of waiting for the delete to
+complete.
+
 040327 release
 --------------
 
